# doomlike

./: .gitignore  CMakeLists.txt  LICENSE  README.md
res/: map01.txt
src/: graphics.cpp  graphics.hpp  input.cpp  input.hpp  kinematics.cpp  kinematics.hpp  main.cpp  player.cpp  player.hpp  raycast.cpp  raycast.hpp  renderer.hpp  tilemap.cpp  tilemap.hpp  tiles.cpp  tiles.hpp  util.hpp
